--- a/src/components/PlayerCard.module.css
+++ b/src/components/PlayerCard.module.css
@@ -4,6 +4,7 @@
   margin-top: 24px;
   perspective: 1000px;
   position: relative;
+  box-sizing: border-box;
 }
 
 .dismissBtn {
