--- a/src/components/ProfileCarousel.module.css
+++ b/src/components/ProfileCarousel.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 500px;
   margin-top: 16px;
+  overflow: hidden;
 }
 
 .tabs {
